---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --diagnostic-level=error src
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true
  },
  "assist": {
    "enabled": true
  },
  "linter": {
    "enabled": false
  }
}
```

## `src/index.js`

```js
import { graphql, useFragment, useMutation } from "react-relay";
import { FC, memo, useCallback } from "react";

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/index.js:1:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Sort these imports.
  
  > 1 │ import { graphql, useFragment, useMutation } from "react-relay";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  > 2 │ import { FC, memo, useCallback } from "react";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │ 
  
  i Safe fix: Organize imports and exports (Biome)
  
    1   │ - import·{·graphql,·useFragment,·useMutation·}·from·"react-relay";
    2   │ - import·{·FC,·memo,·useCallback·}·from·"react";
      1 │ + import·{·FC,·memo,·useCallback·}·from·"react";
      2 │ + import·{·graphql,·useFragment,·useMutation·}·from·"react-relay";
    3 3 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
